# fusionclaw

./: .env.example  LICENSE  README.md  pyproject.toml
benchmarks/: chat_baseline.py  fusion_approach.py  run_benchmark.py
benchmarks/fixtures/: pricing_research.txt  product_research.txt
examples/: quickstart.py
fusionclaw/: __init__.py  claw.py  erc8004.py  fuser.py  models.py  orchestrator.py  registry.py
fusionclaw/claws/: __init__.py  code_analyzer.py  web_search.py
tests/: test_claw.py  test_erc8004.py  test_fuser.py  test_models.py  test_registry.py
